--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"node": ">=5.0.0"
 	},
 	"dependencies": {
-		"simple-class-utils": "<2.0.0"
+		"simple-class-utils": ">=0.0.4 <2.0.0"
 	},
 	"files": [
 		"index.js",
