--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"node": ">=5.0.0"
 	},
 	"dependencies": {
-		"simple-class-utils": ">=0.0.4 <2.0.0"
+		"simple-class-utils": ">=0.0.4 <2.0.0",
+		"simple-function-utils": ">=2.0.0 <3.0.0"
 	},
 	"main": "index.js",
 	"keywords": [
