--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"deep-iterable": "^1.0.0",
 		"parallel-iterable": "^1.0.0",
 		"product-iterable": "^1.0.0",
+		"range-iterable": "^1.0.0",
 		"spread-iterable": "^1.0.0",
 		"x-iterable-utils": "ksxnodemodules/x-iterable-utils#v0.0.0"
 	},
